--- a/internal/frontend/static/style.css
+++ b/internal/frontend/static/style.css
@@ -93,7 +93,12 @@ select {
 
 ::placeholder {
     color: var(--text-muted) !important;
-    font-size: 0.75rem;
+}
+
+.placeholder-text-small {
+    ::placeholder {
+        font-size: 0.75rem;
+    }
 }
 
 ::selection {
@@ -143,51 +148,51 @@ select {
 
 /* interactive states */
 .hover\:bg-main:hover {
-    background-color: var(--bg-main);
+    background-color: var(--bg-main) !important;
 }
 
 .hover\:bg-muted:hover {
-    background-color: var(--bg-muted);
+    background-color: var(--bg-muted) !important;
 }
 
 .hover\:bg-accent:hover {
-    background-color: var(--bg-accent);
+    background-color: var(--bg-accent) !important;
 }
 
 .hover\:bg-accent-muted:hover {
-    background-color: var(--bg-accent-muted);
+    background-color: var(--bg-accent-muted) !important;
 }
 
 .hover\:text-main:hover {
-    color: var(--text-main);
+    color: var(--text-main) !important;
 }
 
 .hover\:text-muted:hover {
-    color: var(--text-muted);
+    color: var(--text-muted) !important;
 }
 
 .hover\:text-accent:hover {
-    color: var(--text-accent);
+    color: var(--text-accent) !important;
 }
 
 .hover\:text-accent-muted:hover {
-    color: var(--text-accent-muted);
+    color: var(--text-accent-muted) !important;
 }
 
 .hover\:border-main:hover {
-    border-color: var(--border-main);
+    border-color: var(--border-main) !important;
 }
 
 .hover\:border-accent:hover {
-    border-color: var(--border-accent);
+    border-color: var(--border-accent) !important;
 }
 
 .focus\:border-main:focus {
-    border-color: var(--border-main);
+    border-color: var(--border-main) !important;
 }
 
 .focus\:border-accent:focus {
-    border-color: var(--border-accent);
+    border-color: var(--border-accent) !important;
 }
 
 /* other misc stuff */
