--- a/internal/frontend/views/password.templ
+++ b/internal/frontend/views/password.templ
@@ -33,3 +33,57 @@ templ PasswordPrompt(reference string) {
 		</div>
 	</div>
 }
+
+templ RawPasswordPrompt(reference string) {
+	<div class="h-full w-full flex flex-row items-center justify-center bg-main">
+		<div class="p-8 space-y-4 bg-muted border border-main rounded-lg shadow-xl">
+			<h2 class="text-2xl font-bold inline-flex items-center gap-2">
+				@icons.Lock(24, 24, "text-muted")
+				password protected paste
+			</h2>
+			<div class="flex flex-col lg:flex-row w-full gap-2 lg:gap-0">
+				<input
+					type="password"
+					id="password"
+					name="password"
+					placeholder="password"
+					required
+					class="h-10 p-2 flex-grow bg-muted text-main border border-main rounded lg:rounded-r-none focus:outline-none focus:border-accent"
+				/>
+				<button
+					onclick="unlockPasswordProtectedPaste()"
+					class="h-10 px-4 py-2 rounded lg:rounded-l-none bg-accent text-accent-muted hover:bg-accent-muted transition-all duration-200"
+				>
+					unlock
+				</button>
+			</div>
+		</div>
+	</div>
+	<script>
+		document
+			.getElementById('password')
+			.addEventListener(
+				'keyup', event => {
+					if (event.key === 'Enter') {
+						unlockPasswordProtectedPaste()
+					}
+				}
+			)
+
+		const unlockPasswordProtectedPaste = () => {
+			const password = document.getElementById('password').value
+			fetch(
+				window.location.href,
+				{ headers: { 'x-skd-password': password } }
+			)
+			.then(response => response.text())
+			.then(
+				text => {
+					document.open('text/plain')
+					document.write(text)
+					document.close()
+				}
+			)
+		}
+	</script>
+}
